feat(task): post
post task end point added to open api yaml file.
pom updated to contain versions in properties.
