# src/main/resources/openapi.yaml
@@ -49,6 +49,68 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+    post:
+      tags:
+        - Task Management System
+      summary: Add a new task to the task management system.
+      operationId: createTask
+      parameters:
+        - name: transactionId
+          in: header
+          required: true
+          schema:
+            type: string
+      requestBody:
+        description: Create a new task in the task management system.
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateTaskRequest'
+          application/xml:
+            schema:
+              $ref: '#/components/schemas/CreateTaskRequest'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/CreateTaskRequest'
+        required: true
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SuccessResponse'
+        '400':
+          description: Invalid input
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '403':
+          description: Unauthorised Access
+          content: { }
+        '404':
+          description: Service Not Found
+          content: { }
+        '429':
+          description: API rate limit exceeded
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '422':
+          description: Validation exception
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        default:
+          description: Unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+
   /allTasks:
     get:
       tags:
@@ -131,6 +193,29 @@ components:
           maxItems: 999
           items:
             $ref: "#/components/schemas/Task"
+    CreateTaskRequest:
+      type: object
+      properties:
+        title:
+          type: string
+        taskDescription:
+          type: string
+          nullable: true
+        status:
+          type: string
+        dueDate:
+          type: string
+          format: date-time
+    SuccessResponse:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+          example: 10
+          description: Id of the task created.
+        message:
+          type: string
   securitySchemes:
     BasicAuth:
      type: http
