# target/generated-sources/src/main/java/uk/gov/hmcts/taskmanager/api/controller/TaskManagementSystemApiDelegate.java
@@ -1,6 +1,9 @@
 package uk.gov.hmcts.taskmanager.api.controller;
 
+import uk.gov.hmcts.taskmanager.domain.CreateTaskRequest;
+import java.util.Date;
 import uk.gov.hmcts.taskmanager.domain.ErrorResponse;
+import uk.gov.hmcts.taskmanager.domain.SuccessResponse;
 import uk.gov.hmcts.taskmanager.domain.Task;
 import uk.gov.hmcts.taskmanager.domain.TaskResponse;
 import io.swagger.v3.oas.annotations.Operation;
@@ -21,8 +24,14 @@ import java.util.Map;
  * A delegate to be called by the {@link TaskManagementSystemApiController}}.
  * Implement this interface with a {@link org.springframework.stereotype.Service} annotated class.
  */
-@jakarta.annotation.Generated(value = "io.swagger.codegen.v3.generators.java.SpringCodegen", date = "2025-06-20T11:39:43.243284200+01:00[Europe/London]")
+@jakarta.annotation.Generated(value = "io.swagger.codegen.v3.generators.java.SpringCodegen", date = "2025-06-20T12:11:19.710409+01:00[Europe/London]")
 public interface TaskManagementSystemApiDelegate {
+
+    /**
+     * @see TaskManagementSystemApi#createTask
+     */
+    ResponseEntity<SuccessResponse> createTask( String  transactionId,
+         CreateTaskRequest  body);
 
     /**
      * @see TaskManagementSystemApi#getTask
